# dopom

./: README.md  pyproject.toml
app/: main.py
static/css/: main.css
templates/components/: todo-create.html  todo-item.html  todo-list.html
templates/pages/: todos.html
