[tool.poetry]
name = "dopom"
version = "0.1.0"
description = "Todo application"
authors = ["Sondre Gunneng <s.gunneng@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.104.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
